--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body{
    
     
 }
-* {
-	border: 1px solid red;
+.texto-encima-photo1{
+    font-size:xx-large;
+    text-align: left;
+    margin-top: 50px;
+    font-family: arial;
 }
+
+
+*{border: 1px solid red;}
