--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body{
     background-color: white;
     height: 10rem;
     margin-top: 5px;
+
 }
+
 .photo1{
     font-size: 15em;
     background-color: beige;
@@ -26,6 +28,24 @@ body{
     margin-top: 50px;
     font-family: arial;
 }
+.texto-encima-photo1-lateral{
+    font-size:large;
+    text-align: right;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-right: 20px;
+    color:grey
+     
+}
+.pie-photo1{
+    line-height:normal;
+ font-size:20px;
+ display:table-header-group;
+ background:white;
+ color:black;
+ font-style: time new roman;
 
+ 
+
+}
 
 *{border: 1px solid red;}
