--- a/styles.css
+++ b/styles.css
@@ -7,35 +7,41 @@
 body{
     background-color: grey;
 }
+.container-general{
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    align-items: center;
+    margin: auto;
+}
 .container{
     background-color: white;
-    height: 10rem;
+    height: 100%;
     margin-top: 5px;
+   
 
+}
+
+.container-small{
+    display: flex;
+    flex-direction: row;
 }
 
 .photo1{
     font-size: 15em;
-    background-color: beige;
     display: flex;
     justify-content: center;
    
     
 }
-.photo2{
-    font-size: 15em;
-    background-color: beige;
-    display: flex;
-    justify-content: center;
-    border: 100px solid transparent;
-   
 
-}
 .texto-encima-photo1{
     font-size:xx-large;
     text-align: left;
     margin-top: 50px;
     font-family: arial;
+    width: 200px;
+   
 }
 .texto-encima-photo1-lateral{
     float:right;
@@ -43,6 +49,7 @@ body{
     color: grey;
     font-size: large;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    
     
 }
 
